Position absolute with top to avoid scrollbars
Weirdly, without a top, these elements can cause scroll bars

--- a/src/scss/generic/_typography.scss
+++ b/src/scss/generic/_typography.scss
@@ -18,6 +18,7 @@ body {
 
 [data-hidden] {
   position: absolute;
+  top: -999em;
   opacity: 0;
 }
 
